--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     },
     "prettier": "@mpietrucha/prettier",
     "dependencies": {
-        "@mpietrucha/is-basic": "^0.0.2",
-        "@mpietrucha/is-constructor": "^0.0.2",
-        "@mpietrucha/none": "^0.0.2",
+        "@mpietrucha/is-basic": "^0.0.4",
+        "@mpietrucha/is-constructor": "^0.0.4",
+        "@mpietrucha/none": "^0.0.4",
         "@mpietrucha/prettier": "^1.0.0",
+        "@mpietrucha/value": "^0.0.3",
         "lodash-es": "^4.17.21"
     },
     "devDependencies": {
-        "unbuild": "^3.3.1"
+        "unbuild": "^3.5.0"
     }
 }
