--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     },
     "prettier": "@mpietrucha/prettier",
     "dependencies": {
-        "@mpietrucha/is-basic": "^0.0.4",
-        "@mpietrucha/is-constructor": "^0.0.4",
-        "@mpietrucha/none": "^0.0.4",
-        "@mpietrucha/prettier": "^1.0.0",
-        "@mpietrucha/value": "^0.0.3",
-        "lodash-es": "^4.17.21"
+        "@mpietrucha/function": "^0.0.2",
+        "@mpietrucha/is-basic": "^0.0.5",
+        "@mpietrucha/is-constructor": "^0.0.5",
+        "@mpietrucha/none": "^0.0.5",
+        "@mpietrucha/value": "^0.0.4"
     },
     "devDependencies": {
+        "@mpietrucha/prettier": "^1.0.0",
         "unbuild": "^3.5.0"
     }
 }
